force-app/main/default/objects/Servay__c/Servay__c.object-meta.xml
<CustomObject>
    <label>Servey</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Servay Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Serveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>