force-app/main/default/objects/Servay__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>