force-app/main/default/objects/Servay__c/fields/Servey_Questions__c.field-meta.xml
<CustomField>
    <fullName>Servey_Questions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servey Questions</label>
    <referenceTo>Servey_Questions__c</referenceTo>
    <relationshipName>Servays</relationshipName>
    <type>Lookup</type>
</CustomField>